play-pit/CICD/Argo-CD/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: argocd
 labels:
  name: argocd
