play-pit/CICD/Argo-CD/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - argocd.kx-as-code.local
      secretName: argocd-secret
  rules:
  - host: argocd.kx-as-code.local
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: http
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
        - grpc.argocd.kx-as-code.local
      secretName: argocd-secret
  rules:
  - host: grpc.argocd.kx-as-code.local
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: https
